# MiniFairRoot

./: CMakeLists.txt  README.md
base/: CMakeLists.txt  FairBaseLinkDef.h  FairField.cxx  FairField.h  FairFileSource.cxx  FairFileSource.h  FairMCEventHeader.cxx  FairMCEventHeader.h  FairRootManager.cxx  FairRootManager.h  FairRun.cxx  FairRun.h  FairRunAna.cxx  FairRunAna.h  FairSource.cxx  FairSource.h  FairTask.cxx  FairTask.h
cmake/modules/: FairMacros.cmake  FindROOT.cmake  ROOTMacros.cmake
fairlogger/: CMakeLists.txt  LoggerLinkDef.h
tools/: CMakeLists.txt  FairToolsLinkDef.h
